Fix for bug 120451 -- clean up the sleep Q entry on quit, so that we don't leave a bad entry there and hose the machine some time later. r=sdagley, sr=beard, a=blizzard